--- a/index.html
+++ b/index.html
@@ -19,6 +19,24 @@
                 <li>Ma liste</li>
             </ul>
         </div>
+        <div id="b_right">
+            <ul>
+                <li>
+                    <img src="img/loupe.png" alt="loupe" class="ico"></li>
+                <li>
+                    <img src="img/gift.png" alt="cadeau" class="ico"></li>
+                <li>
+                    <img src="img/bel.png" alt="cloche" class="ico"></li>
+                <li id="profile">
+                    <div>
+                        <img src="img/gohan.jpg" alt="photo profile" class="ico">
+                    </div>
+                    <div>
+                        <img src="img/arrow.png" alt="flèche du bas" id="arrow">
+                    </div>
+                </li>
+            </ul>
+        </div>
     </nav>
     <section>
         <div>
